// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsii-config snapshots builds prompt questions with current config values as defaults 1`] = `
Array [
  Object {
    "choices": Array [
      "java",
      "python",
      "dotnet",
    ],
    "default": Array [
      "java",
      "dotnet",
      "python",
    ],
    "message": "Target Languages",
    "name": "jsiiTargets",
    "type": "checkbox",
  },
  Object {
    "default": "dist",
    "message": "Output directory for typescript compiler",
    "name": "outdir",
    "type": "input",
    "validate": [Function],
  },
  Object {
    "choices": Array [
      "full",
      "short",
    ],
    "default": "short",
    "message": "Version format, default is full",
    "name": "versionFormat",
    "type": "list",
  },
  Object {
    "default": "software.amazon.jsii.tests.calculator.base",
    "message": "Java Package - root Java package name under which the types will be declared",
    "name": "targets.java.package",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "default": "software.amazon.jsii.tests",
    "message": "Maven GroupID - package group id",
    "name": "targets.java.maven.groupId",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "default": "calculator-base",
    "message": "Maven ArtifactID - package artifact id",
    "name": "targets.java.maven.artifactId",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "filter": [Function],
    "message": "Maven Version Suffix - optional suffix appended to the end of the maven package's version field",
    "name": "targets.java.maven.versionSuffix",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": "scope.jsii_calc_base",
    "message": "Python Module - name of the generated Python module",
    "name": "targets.python.module",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "default": "scope.jsii-calc-base",
    "message": "Python Distname - PyPI distribution name for the package",
    "name": "targets.python.distName",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "default": "Amazon.JSII.Tests.CalculatorNamespace.BaseNamespace",
    "message": ".NET Namespace - root namespace under which types will be declared",
    "name": "targets.dotnet.namespace",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "default": "Amazon.JSII.Tests.CalculatorPackageId.BasePackageId",
    "message": ".NET Package Id - identifier of the package in the NuGet registry",
    "name": "targets.dotnet.packageId",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "message": ".NET Icon Url - Url of the icon to be shown in the NuGet gallery",
    "name": "targets.dotnet.iconUrl",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "default": "",
    "filter": [Function],
    "message": ".NET Version Suffix - optional suffix that will be appended at the end of the NuGet package's version field, must begin with a -",
    "name": "targets.dotnet.versionSuffix",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": false,
    "message": ".NET Sign Assembly - whether the assembly should be strong-name signed. Defaults to false when not specified",
    "name": "targets.dotnet.signAssembly",
    "type": "confirm",
    "when": [Function],
  },
  Object {
    "default": "",
    "message": ".NET Assembly Originator Key File - path to the strong-name signing key to be used",
    "name": "targets.dotnet.assemblyOriginatorKeyFile",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
]
`;

exports[`jsii-config snapshots builds prompt questions with no current config 1`] = `
Array [
  Object {
    "choices": Array [
      "java",
      "python",
      "dotnet",
    ],
    "default": Array [],
    "message": "Target Languages",
    "name": "jsiiTargets",
    "type": "checkbox",
  },
  Object {
    "default": "dist",
    "message": "Output directory for typescript compiler",
    "name": "outdir",
    "type": "input",
    "validate": [Function],
  },
  Object {
    "choices": Array [
      "full",
      "short",
    ],
    "default": "full",
    "message": "Version format, default is full",
    "name": "versionFormat",
    "type": "list",
  },
  Object {
    "message": "Java Package - root Java package name under which the types will be declared",
    "name": "targets.java.package",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "message": "Maven GroupID - package group id",
    "name": "targets.java.maven.groupId",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "message": "Maven ArtifactID - package artifact id",
    "name": "targets.java.maven.artifactId",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "filter": [Function],
    "message": "Maven Version Suffix - optional suffix appended to the end of the maven package's version field",
    "name": "targets.java.maven.versionSuffix",
    "type": "input",
    "when": [Function],
  },
  Object {
    "message": "Python Module - name of the generated Python module",
    "name": "targets.python.module",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "message": "Python Distname - PyPI distribution name for the package",
    "name": "targets.python.distName",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "message": ".NET Namespace - root namespace under which types will be declared",
    "name": "targets.dotnet.namespace",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "message": ".NET Package Id - identifier of the package in the NuGet registry",
    "name": "targets.dotnet.packageId",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "message": ".NET Icon Url - Url of the icon to be shown in the NuGet gallery",
    "name": "targets.dotnet.iconUrl",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
  Object {
    "default": "",
    "filter": [Function],
    "message": ".NET Version Suffix - optional suffix that will be appended at the end of the NuGet package's version field, must begin with a -",
    "name": "targets.dotnet.versionSuffix",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": false,
    "message": ".NET Sign Assembly - whether the assembly should be strong-name signed. Defaults to false when not specified",
    "name": "targets.dotnet.signAssembly",
    "type": "confirm",
    "when": [Function],
  },
  Object {
    "default": "",
    "message": ".NET Assembly Originator Key File - path to the strong-name signing key to be used",
    "name": "targets.dotnet.assemblyOriginatorKeyFile",
    "type": "input",
    "validate": [Function],
    "when": [Function],
  },
]
`;
